deployment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: walletmanagement-api
spec:
  backend:
    serviceName: walletmanagement
    servicePort: 8083
  rules:
  - http:
      paths:
      - backend:
          serviceName: walletmanagement
          servicePort: 8083
